--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
+.App{
+  font-weight: 600;
+  font-family: verdana;
+  background-color: antiquewhite;
+}
+.header{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 24px;
+  background-color:brown;
   color: white;
+  line-height: 48px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.add_contact{
+  text-align: center;
+  margin: 30px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  font-size: 22px;
 }
+
+.field{
+  margin: 10px 0;
+  font-size: 20px;
+  color: black;
+}
+
+.field input{
+  font-size: 16px;
+  line-height: 24px;
+  outline: none;
+  border-radius: 4px;
+  border-color: brown;
+}
+
+.btn{
+  border: 1px solid brown;
+  padding: 6px 8px;
+  border-radius: 4px;
+  color: brown;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.list_title{
+  text-align: center;
+  font-size: 22px;
+  margin: 40px 0 20px 0;
+}
+
+.list{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-between;
+  border: 1px solid brown;
+  border-radius: 4px;
+  padding: 10px;
+  align-items: center;
+  background-color: #7f1c1c;
+  color: white;
+  margin: 20px 0;
+}
+
